--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "email-worker-listener",
+  "name": "personal-interfaces",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "handler.js",
   "scripts": {
+    "debug": "node --inspect node_modules/serverless/bin/serverless offline -s dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "twilio": "^3.39.1",
+    "cheerio": "^1.0.0-rc.3",
     "imap-simple": "^5.0.0",
     "lodash": "^4.17.19",
     "mailparser": "^2.7.7",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25"
+  },
+  "devDependencies": {
+    "serverless": "^1.78.1",
+    "serverless-offline": "^6.5.0"
   }
 }
