--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mailparser": "^2.7.7",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
+    "mongoose-autopopulate": "^0.12.3",
     "twilio": "^3.39.1"
   },
   "devDependencies": {
