SVR confing on serverless file.

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@ functions:
     name: TwilioIncommingMessage-lambda-${opt:stage}
     environment: 
       NODE_ENV: ${opt:stage}
+      MONGO_SRV:  ${file(./config/${opt:stage}.json):SRV_CONFIG}
       MONGO_PORT: 27017
       MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
       MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
@@ -37,6 +38,7 @@ functions:
     name: PrepaymentsRepo-get-${opt:stage}
     environment: 
       NODE_ENV: ${opt:stage}
+      MONGO_SRV:  ${file(./config/${opt:stage}.json):SRV_CONFIG}
       MONGO_PORT: 27017
       MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
       MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
@@ -58,6 +60,7 @@ functions:
     name: PrepaymentsRepo-put-${opt:stage}
     environment: 
       NODE_ENV: ${opt:stage}
+      MONGO_SRV:  ${file(./config/${opt:stage}.json):SRV_CONFIG}
       MONGO_PORT: 27017
       MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
       MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
@@ -79,6 +82,7 @@ functions:
     name: StatsRepo-get-${opt:stage}
     environment: 
       NODE_ENV: ${opt:stage}
+      MONGO_SRV:  ${file(./config/${opt:stage}.json):SRV_CONFIG}
       MONGO_PORT: 27017
       MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
       MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
@@ -105,15 +109,13 @@ functions:
         rate: rate(20 minutes)
         enabled: true
     environment: 
+      MONGO_SRV:  ${file(./config/${opt:stage}.json):SRV_CONFIG}
       MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
       MONGO_PORT: '27017'
       MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
       MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
       MONGO_SSL: true
       MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
-      SUBJECT_SEARCHED: 'Servicio de Alertas y Notificaciones Bancolombia'
-      BODY_BASE_SEARCHED: 'Bancolombia le informa'
-      BODY_SKIPPED_PHRASE: 'Bancolombia le informa que su factura inscrita'
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
       NODE_ENV: ${opt:stage}
