--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "html-to-text": "^6.0.0",
     "imap-simple": "^5.0.0",
     "lodash": "^4.17.20",
     "mailparser": "^2.7.7",
