--- a/serverless.yml
+++ b/serverless.yml
@@ -90,6 +90,7 @@ functions:
       MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
       MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
       BODY_REQUEST: ${file(./config/${opt:stage}.json):BODY_REQUEST}
+      PHONE_NUMBER: ${file(./config/${opt:stage}.json):PHONE_NUMBER}
       MONGO_SSL: true
     events: 
       - http: 
