--- a/serverless.yml
+++ b/serverless.yml
@@ -33,7 +33,7 @@ functions:
               - Content-Type
               - Transfer-encoding
   GetPrepayments:
-    handler: Personal-Interfaces/Functions/PrePayments.get
+    handler: Personal-Interfaces/Functions/Payments.get
     name: PrepaymentsRepo-get-${opt:stage}
     environment: 
       NODE_ENV: ${opt:stage}
@@ -45,6 +45,7 @@ functions:
       MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
       MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
       BODY_REQUEST: ${file(./config/${opt:stage}.json):BODY_REQUEST}
+      PHONE_NUMBER: ${file(./config/${opt:stage}.json):PHONE_NUMBER}
       MONGO_SSL: true
     events: 
       - http: 
@@ -55,7 +56,7 @@ functions:
             - origin: '*'
             - headers:  'Access-Control-Allow-Origin'
   PutPrepayments:
-    handler: Personal-Interfaces/Functions/PrePayments.put
+    handler: Personal-Interfaces/Functions/Payments.put
     name: PrepaymentsRepo-put-${opt:stage}
     environment: 
       NODE_ENV: ${opt:stage}
