--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
+    "chrome-aws-lambda": "^5.5.0",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "html-to-text": "^6.0.0",
     "imap-simple": "^5.0.0",
@@ -19,9 +22,11 @@
     "mailparser": "^2.7.7",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
+    "puppeteer-core": "^5.5.0",
     "twilio": "^3.39.1"
   },
   "devDependencies": {
+    "puppeteer": "^5.5.0",
     "serverless": "^1.78.1",
     "serverless-offline": "^6.5.0"
   }
