--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,14 @@
 service: personal-interface
 plugins:
   - serverless-offline
+  
 package: 
   exclude: 
     - client/**
+    - node_modules/puppeteer/.local-chromium/**
+    - node_modules/chrome-aws-lambda/**
+    - devutils/**
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -35,6 +40,7 @@ functions:
             - headers:
                 - Content-Type
                 - Transfer-encoding
+
   GetPrepayments:
     handler: API/Functions/Payments.get
     name: PrepaymentsRepo-get-${opt:stage}
@@ -58,6 +64,7 @@ functions:
             - enabled: true
             - origin: "*"
             - headers: "Access-Control-Allow-Origin"
+
   PutPrepayments:
     handler: API/Functions/Payments.put
     name: PrepaymentsRepo-put-${opt:stage}
@@ -81,6 +88,7 @@ functions:
             - enabled: true
             - origin: "*"
             - headers: "Access-Control-Allow-Origin"
+
   GetStats:
     handler: API/Functions/BoxFlow.get
     name: StatsRepo-get-${opt:stage}
@@ -104,6 +112,7 @@ functions:
             - enabled: true
             - origin: "*"
             - headers: "Access-Control-Allow-Origin"
+
   EmailChecker:
     handler: AutomationServices/AutoMailChecker/checker.start
     name: AutomationServices-EmailChecker-${opt:stage}
@@ -124,4 +133,25 @@ functions:
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
       MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
+      NODE_ENV: ${opt:stage}
+
+  DataCreditoScraper:
+    handler: AutomationServices/DataCreditoScraper/scraper.start
+    name: AutomationServices-DataCreditoScraper-${opt:stage}
+    events:
+      - schedule:
+          name: "cw-start-datacredito-scraper"
+          description: "Function to scraper datacredito data"
+          rate: rate(1 minute) # Every Fifteen days, some entities take a time to report updates
+          enabled: true
+    environment:
+      MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
+      MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
+      MONGO_PORT: "27017"
+      MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
+      MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
+      MONGO_SSL: true
+      MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
+      EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
+      MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
       NODE_ENV: ${opt:stage}
