--- a/serverless.yml
+++ b/serverless.yml
@@ -13,26 +13,25 @@ provider:
   name: aws
   runtime: nodejs12.x
   stage: test
-  memorySize: 2048  # optional, in MB, default is 1024
-  timeout: 30 # optional, in seconds, default is 6
-  layers:
-    - arn:aws:lambda:${self:provider.region}:764866452798:layer:chrome-aws-lambda:22
-    
+  memorySize: 520  # optional, in MB, default is 1024
+  timeout: 15 # optional, in seconds, default is 6
+  environment: #Shared Environments
+    NODE_ENV: ${opt:stage}
+    MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
+    MONGO_PORT: 27017
+    MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
+    MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
+    MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
+    MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
+    MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
+    MONGO_SSL: true
+
 functions:
   TwilioIncommingMessage:
     handler: AutomationServices/WhatsAppBot/handlerIncommingMessage.handler
     name: TwilioIncommingMessage-lambda-${opt:stage}
     environment:
-      NODE_ENV: ${opt:stage}
-      MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
-      MONGO_PORT: 27017
-      MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
-      MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
-      MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
-      MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
-      MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
       BODY_REQUEST: ${file(./config/${opt:stage}.json):BODY_REQUEST}
-      MONGO_SSL: true
     events:
       - http:
           path: "/whatsapp/webhook/"
@@ -47,18 +46,9 @@ functions:
   GetPrepayments:
     handler: API/Functions/Payments.get
     name: PrepaymentsRepo-get-${opt:stage}
-    environment:
-      NODE_ENV: ${opt:stage}
-      MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
-      MONGO_PORT: 27017
-      MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
-      MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
-      MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
-      MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
-      MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
+    environment: 
       BODY_REQUEST: ${file(./config/${opt:stage}.json):BODY_REQUEST}
       PHONE_NUMBER: ${file(./config/${opt:stage}.json):PHONE_NUMBER}
-      MONGO_SSL: true
     events:
       - http:
           path: /prepayments
@@ -72,17 +62,8 @@ functions:
     handler: API/Functions/Payments.put
     name: PrepaymentsRepo-put-${opt:stage}
     environment:
-      NODE_ENV: ${opt:stage}
-      MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
-      MONGO_PORT: 27017
-      MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
-      MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
-      MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
-      MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
-      MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
       BODY_REQUEST: ${file(./config/${opt:stage}.json):BODY_REQUEST}
       PHONE_NUMBER: ${file(./config/${opt:stage}.json):PHONE_NUMBER}
-      MONGO_SSL: true
     events:
       - http:
           path: /prepayments
@@ -96,17 +77,8 @@ functions:
     handler: API/Functions/BoxFlow.get
     name: StatsRepo-get-${opt:stage}
     environment:
-      NODE_ENV: ${opt:stage}
-      MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
-      MONGO_PORT: 27017
-      MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
-      MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
-      MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
-      MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
-      MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
       BODY_REQUEST: ${file(./config/${opt:stage}.json):BODY_REQUEST}
       PHONE_NUMBER: ${file(./config/${opt:stage}.json):PHONE_NUMBER}
-      MONGO_SSL: true
     events:
       - http:
           path: /boxflow/stats
@@ -126,35 +98,21 @@ functions:
           rate: rate(20 minutes)
           enabled: true
     environment:
-      MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
-      MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
-      MONGO_PORT: "27017"
-      MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
-      MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
-      MONGO_SSL: true
-      MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
-      MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
-      NODE_ENV: ${opt:stage}
 
   DataCreditoScraper:
     handler: AutomationServices/DataCreditoScraper/scraper.start
     name: AutomationServices-DataCreditoScraper-${opt:stage}
+    memorySize: 2048  # optional, in MB, default is 1024
+    timeout: 30 # optional, in seconds, default is 6
     events:
       - schedule:
           name: "cw-start-datacredito-scraper"
           description: "Function to scraper datacredito data"
           rate: rate(0 0 15,30 * *) # Every Fifteen days, some entities take a time to report updates
           enabled: true
+    layers:
+      - arn:aws:lambda:${self:provider.region}:764866452798:layer:chrome-aws-lambda:22
     environment:
-      MONGO_SRV: ${file(./config/${opt:stage}.json):SRV_CONFIG}
-      MONGO_HOST: ${file(./config/${opt:stage}.json):MONGO_HOST}
-      MONGO_PORT: "27017"
-      MONGO_SECRET: ${file(./config/${opt:stage}.json):MONGO_SECRET}
-      MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
-      MONGO_SSL: true
-      MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
-      MONGO_DATABASE: ${file(./config/${opt:stage}.json):MONGO_DATABASE}
-      NODE_ENV: ${opt:stage}
