Fixing  datacreditoscraper cron rate.

--- a/serverless.yml
+++ b/serverless.yml
@@ -110,7 +110,7 @@ functions:
       - schedule:
           name: "cw-start-datacredito-scraper"
           description: "Function to scraper datacredito data"
-          rate: rate(0 0 15,30 * * *) # Every Fifteen days, some entities take a time to report updates
+          rate: cron(0 0 15,30 * ? *) # Every Fifteen days, some entities take a time to report updates
           enabled: true
     layers:
       - arn:aws:lambda:${self:provider.region}:764866452798:layer:chrome-aws-lambda:22
