--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
+    "d3-format": "^2.0.0",
+    "d3-scale": "^3.2.3",
+    "d3-shape": "^2.0.0",
     "emerald-ui": "^1.5.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
@@ -19,7 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "deploy": "npm run build && aws s3 sync build/ s3://finances.andresmorelos.dev --acl public-read",
+    "deploy": "npm run build && aws s3 sync build/ s3://finance.andresmorelos.dev --acl public-read",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
