--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "deploy": "npm run build && aws s3 sync build/ s3://finance.andresmorelos.dev --acl public-read",
+    "deploy": "npm run build && aws s3 sync build/ s3://finances.flavioaandres.com --acl public-read",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
