--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@aws-amplify/ui-react": "^0.2.33",
     "apexcharts": "^3.20.0",
-    "axios": "^0.19.2",
+    "aws-amplify": "^3.3.13",
     "d3-format": "^2.0.0",
     "d3-scale": "^3.2.3",
     "d3-shape": "^2.0.0",
@@ -17,6 +15,11 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "sweetalert2": "^9.17.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
